feat(gb28181): support Date and Note signal digest
